	- Simplify. (DLR)
	- Fix problems where translated versions of "(dir)" could be
	  truncated, and where file sizes could be too long. (DLR)
	- For the ".." entry, display "(parent dir)" instead of "(dir)",
	  as Pico does. (DLR)
  browser_select_filename()
	- New function, used to select a specific filename in the list.
	  (DLR)
  findnextfile()
	- Simplify the uses of tail(). (DLR)
- doc/syntax/c.nanorc:
	- Since .i and .ii are preprocessed C and C++ output, colorize
	  them here. (Mike Frysinger)
- doc/syntax/ruby.nanorc:
	- Add missing blank line after the first comment, for
	  consistency. (DLR)

GNU nano 1.3.12 - 2006.06.26
- General:
	- Miscellaneous comment fixes. (DLR)
	- Implement filename searches in the file browser.  New
	  functions filesearch_init(), findnextfile(),
	  findnextfile_wrap_reset(), filesearch_abort(),
	  do_filesearch(), do_fileresearch(), do_first_file(),
	  do_last_file(), do_help_void(), and do_browser_help(); changes
	  to do_browser(), parse_browser_input(), shortcut_init(),
	  do_help(), and help_init(). (DLR)
	- Open all files in binary mode for consistency and robustness.
	  Changes to load_history() and do_rcfile(). (DLR)
	- Change translator-specific comments in global.c and prompt.c
	  so that they show up in nano.pot, and make them all
	  consistent. (Benno Schulenberg and DLR)
	- Reduce USE_UTF8 to a static bool in chars.c, allow nano.c to
	  set it via a function, and allow winio.c to read its value
	  when needed.  New functions utf8_init() and using_utf8();
	  changes to is_alnum_mbchar(), is_blank_mbchar(),
	  is_cntrl_mbchar(), is_punct_mbchar(), control_mbrep(),
	  mbrep(), mbwidth(), mb_cur_max(), make_mbchar(),
	  parse_mbchar(), mbstrncasecmp(), mbstrcasestr(),
	  mbrevstrcasestr(), mbstrnlen(), mbstrchr(), mbstrpbrk(),
	  mbrevstrpbrk(), has_blank_mbchars(), is_valid_mbstring(),
	  main(), display_string(), and do_credits(). (DLR)
	- Add the ability to use bold text instead of reverse video